@@ -1,5 +1,5 @@
                    FUNCTION:NAME
-                exit_group:entry 
+                    getpid:entry   raised                           
 
 -- @@stderr --
 dtrace: script 'test/unittest/raise/tst.raise2.d' matched 5 probes
